# PES2020RTWC

./: .gitignore  Dockerfile  Global_Variables.py  MatchSimulator.py  PESSimulator.py  README.md  db.sqlite3  docker-compose.yml  draw.py  entrypoint.sh  fixtures.py  manage.py  mongo-init.sh  pyproject.toml  standings.py  utils.py
PES2020RTWC/: asgi.py  settings.py  urls.py  wsgi.py
africa/: urls.py  views.py
asia/: urls.py  views.py
ceno_america/: apps.py  urls.py  views.py
database/: Fixtures.json  Places.json  Teams.json  initDBScript
docker/: AFC.json  CAF.json  CONCACAF.json  OFC.json  docker-compose.yml  fifa_nations.json  fixture-AFC.json  fixture-CAF.json  fixture-CONCACAF.json  fixture-FIFA.json  fixture-OFC.json  fixtures.json  places.json  reset_script.sql
europa/: urls.py  views.py
main/: models.py  services.py  urls.py  views.py
main/static/: base.scss
main/templatetags/: core_tags.py
oceania/: urls.py  views.py
query/: updt_matchResult.sql
sudamerica/: apps.py  urls.py  views.py
templates/: base.html
templates/africa/: finalround.html  fstround.html  sndround.html  teamlist.html  thrround.html
templates/asia/: finalround.html  fstround.html  sndround.html  teamlist.html  thrround.html
templates/europa/: finalround.html  fstround.html  playoff.html  sndround.html  teamlist.html  thrround.html
templates/main/: flag_showcase.html  index.html
templates/ncamerica/: finalround.html  fstround.html  teamlist.html
templates/oceania/: finalround.html  fstround.html  teamlist.html
worldcup/: urls.py  views.py
(+92 files in other folders)
